<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">宝威驴途</string>
    <string name="record">记录</string>
    <string name="find">发现</string>
    <string name="team">组队</string>
    <string name="mine">我的</string>
    <string name="navigation">导航</string>
    <string name="me">个人中心</string>
    <string name="my_journey">我的行程</string>
    <string name="my_collect">我的收藏</string>
    <string name="find_nearby_text">附近</string>

    <string name="find_title_new_text"></string>
    <string name="find_select_btn">精选</string>
    <string name="SaveTrack">保存路线</string>
    <string name="around_route">周边行程</string>
    <string name="refer_route">参考行程</string>
    <string name="position_of_teammate">队友位置</string>
    <string name="add_footprint">添加脚印</string>
    <string name="find_search_type">类型</string>
    <string name="find_search_region">地区</string>
</resources>