<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@id/titlebar_layout"
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:background="@color/public_title_bg_color" >

        <TextView
            android:id="@id/titlebar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/me"
            android:textSize="25.0sp" >
        </TextView>
    </RelativeLayout>

    <Button
        android:id="@id/my_collect"
        style="@style/Mine_layout_botton"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/my_journey"
        android:text="@string/my_collect" />

    <Button
        android:id="@id/my_journey"
        style="@style/Mine_layout_botton"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/my_journey" />

</RelativeLayout>